--- a/hans/package.json
+++ b/hans/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hans",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
+  "type": "module",
   "author": "Hans Kim",
   "license": "MIT",
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node --experimental-specifier-resolution=node ./src/index.js"
   }
 }
