--- a/hans/package.json
+++ b/hans/package.json
@@ -7,5 +7,9 @@
   "license": "MIT",
   "scripts": {
     "start": "node --experimental-specifier-resolution=node ./src/index.js"
+  },
+  "devDependencies": {
+    "eslint": ">=5.16.0",
+    "eslint-config-google": "^0.14.0"
   }
 }
