--- a/hans/package.json
+++ b/hans/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "eslint": ">=5.16.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "prettier": "^2.8.0"
   }
 }
