--- a/sang/Cargo.toml
+++ b/sang/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 dotenv = { version = "0.15" }
+regex = "1.7.0"
